[package]
name = "ragnor-mev-bot"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A MEV bot for Ethereum blockchain"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
web3 = "0.19.0"
ethers = { version = "2.0.7", features = ["ws"] }
ethers-providers = "2.0.7"
ethers-signers = "2.0.7"
ethers-core = "2.0.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
config = "0.13.3"
log = "0.4.17"
env_logger = "0.10.0"
async-trait = "0.1.68"
futures = "0.3.28"
hex = "0.4.3"
dotenv = "0.15.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.4.0"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.2"
pretty_assertions = "1.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

